workspace-sf/force-app/main/default/objects/GarantiaContratanteProposta__c/GarantiaContratanteProposta__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as garantias do contratante da proposta</description>
    <label>Garantia do contratante da proposta</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantias do contratante da proposta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>