workspace-sf/force-app/main/default/objects/GarantiaContratanteProposta__c/fields/ContratanteProposta__c.field-meta.xml
<CustomField>
    <fullName>ContratanteProposta__c</fullName>
    <label>Contratante da proposta</label>
    <referenceTo>ContratanteProposta__c</referenceTo>
    <relationshipLabel>Garantias do contratante da proposta</relationshipLabel>
    <relationshipName>GarantiasContratanteProposta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>