workspace-sf/force-app/main/default/objects/GarantiaContratanteProposta__c/fields/DescontoAgravoPercentualParcelamento__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoPercentualParcelamento__c</fullName>
    <label>Desconto agravo percentual parcelamento</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>