workspace-sf/force-app/main/default/objects/GarantiaContratanteProposta__c/fields/Garantia__c.field-meta.xml
<CustomField>
    <fullName>Garantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia</label>
    <referenceTo>Garantia__c</referenceTo>
    <relationshipLabel>Garantias do contratante da proposta (Garantia)</relationshipLabel>
    <relationshipName>GarantiasContratanteProposta</relationshipName>
    <type>Lookup</type>
</CustomField>