workspace-sf/force-app/main/default/objects/GarantiaContratanteProposta__c/fields/PremioPuro__c.field-meta.xml
<CustomField>
    <fullName>PremioPuro__c</fullName>
    <label>Prêmio puro R$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>