workspace-sf/force-app/main/default/objects/GarantiaContratanteProposta__c/fields/TipoDescontoAgravo__c.field-meta.xml
<CustomField>
    <fullName>TipoDescontoAgravo__c</fullName>
    <label>Tipo desconto agravo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Técnico</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Informado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>