workspace-sf/force-app/main/default/objects/GarantiaContratanteProposta__c/validationRules/BloquearPreenchimentoCampos.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearPreenchimentoCampos</fullName>
    <active>true</active>
    <description>Edições e adições de novos dados bloqueados para propostas com o status &quot;Contratada&quot;</description>
    <errorConditionFormula>ISPICKVAL(  ContratanteProposta__r.Proposta__r.Status  , &quot;Contratada&quot;) &amp;&amp;
$Profile.Name  &lt;&gt;  &quot;Administrador do sistema&quot;</errorConditionFormula>
    <errorMessage>Edições de campos e adições de novos dados não são permitidas para Propostas com o Status &quot;Contratada&quot;</errorMessage>
</ValidationRule>